refactor: 메서드 구조 변경